# billy

./: CHANGELOG.md  DockerFile  Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: buildpush.yml  buildpushdev.yml  buildpushrelease.yml  buildpushrelease_docker.yml  buildpushrelease_testpypi.yml  buildtest.yml  code-cov.yml  workflow.yml
billy/: domain.py
billy/domain/: BillInterface.py  WorkLogDict.py  WorkLogInterface.py  WorkLogSet.py  WorkLogTable.py  WorkSessionInterface.py  WorkSessionSimple.py  domain.py
billy/tests/: tests_domain.py
billy/tests/domain/: test_WorkLogDict.py  test_WorkLogSet.py  test_WorkSessionSimple.py
freebilly/domain/: AbstractWorkLog.py  OrderedSetWorkLog.py  PendulumWorkSession.py
freebilly/endpoint/: ClickEndPoint.py  RumpsEndPoint.py
freebilly/repository/: AbstractRepository.py  AbstractUnitOfWork.py  CsvRepository.py  CsvUnitOfWork.py  CsvWorkLogRepository.py  CsvWorkLogUnitOfWork.py
freebilly/services/: AbstractServiceLayer.py  ConcreteServiceLayer.py
freebilly/tests/endpoint/: test_ClickEndPoint.py
freebilly/tests/repository/: test_CsvRepository.py  test_CsvUnitOfWork.py  test_CsvWorkLogRepository.py
freebilly/tests/services/: test_ConcreteServiceLayer.py
src/billy/domain/: WorkLogInterface.py  WorkLogSet.py  WorkSessionSimple.py
src/freebilly/domain/: AbstractWorkLog.py  AbstractWorkSession.py  AbstractWorkTime.py  OrderedSetWorkLog.py  PendulumWorkSession.py  PendulumWorkTime.py  SetWorkLog.py  WorkLogInterface.py  WorkLogSet.py  WorkSessionSimple.py
src/freebilly/endpoint/: AbstractEndPoint.py  ClickEndPoint.py  record_session.py
src/freebilly/repository/: AbstractRepository.py  AbstractUnitOfWork.py  CsvRepository.py  CsvUnitOfWork.py
src/freebilly/services/: AbstractServiceLayer.py  ConcreteServiceLayer.py
tests/domain/: test_OrderedSetWorkLog.py  test_PendulumWorkSession.py  test_SetWorkLog.py  test_WorkLogSet.py  test_WorkSessionSimple.py
tests/repository/: test_CsvRepository.py  test_CsvUnitOfWork.py
tests/services/: ConcreteServiceLayer.py  test_ConcreteServiceLayer.py
