[metadata]
name = freebilly
version = 0.0.5
author = Emile Tenezakia
author_email = e.tenezakis@gmail.com
description = Freelancer logging and billing time saver
url = https://github.com/emileten/freebilly
project_urls =
    Bug Tracker = https://github.com/emileten/freebilly/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    click
    ordered-set
    pendulum
    black
    pytest

[options.entry_points]
console_scripts =
    freebilly = freebilly.endpoint.ClickEndPoint:ClickEndPoint.freebilly_cli