[metadata]
name = freebilly
version = 0.0.6
author = Emile Tenezakis
author_email = e.tenezakis@gmail.com
description = automate keeping track of work sessions and billing
url = https://github.com/emileten/freebilly
project_urls =
    Bug Tracker = https://github.com/emileten/freebilly/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    click
    ordered-set
    pendulum
    black
    pytest
    custom_inherit
    pyyaml

[options.entry_points]
console_scripts =
    freebilly = freebilly.endpoint.ClickEndPoint:freebilly_cli