[metadata]
name = freebilly
version = v0.0.7
author = Emile Tenezakis
author_email = e.tenezakis@gmail.com
description = automate keeping track of work sessions and billing
url = https://github.com/emileten/freebilly
project_urls =
    Bug Tracker = https://github.com/emileten/freebilly/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    click==8.0.3
    ordered-set==4.0.2
    pendulum==2.1.2
    black==21.12b0
    pytest==6.2.5
    custom_inherit==2.4.0
    pyyaml==6.0

[options.entry_points]
console_scripts =
    freebilly = freebilly.endpoint.ClickEndPoint:freebilly_cli